name:                albellipdf
version:             0.1.0.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/bneijt/albellipdf#readme
license:             BSD3
license-file:        LICENSE
author:              Bram Neijt
maintainer:          bneijt@gmail.com
copyright:           GPL3
category:            Experiment
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
    hs-source-dirs:      src
    exposed-modules:     Lib
                       , Decrypt
    build-depends:       base >= 4.7 && < 5
                       , directory
                       , filepath
                       , process
                       , random
                       , bytestring
    default-language:    Haskell2010

executable albellipdf-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , albellipdf
  default-language:    Haskell2010

test-suite albellipdf-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , albellipdf
                     , bytestring
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bneijt/albellipdf
